[gd_scene load_steps=2 format=3 uid="uid://hud_scene"]

[ext_resource type="Script" path="res://scripts/ui/HUD.gd" id="1_hud_script"]

[node name="HUD" type="CanvasLayer"]
layer = 10
script = ExtResource("1_hud_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1280.0
offset_bottom = -720.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 25)
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxContainer/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "100 / 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CoreCounter" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "CORE: 0 / 5"

[node name="AbilityContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DashIcon" type="ColorRect" parent="MarginContainer/VBoxContainer/AbilityContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
color = Color(0.4, 0.4, 0.4, 0.5)
tooltip_text = "Air Dash (Shift)"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/AbilityContainer/DashIcon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "D"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DoubleJumpIcon" type="ColorRect" parent="MarginContainer/VBoxContainer/AbilityContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
color = Color(0.4, 0.4, 0.4, 0.5)
tooltip_text = "Double Jump (Space x2)"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/AbilityContainer/DoubleJumpIcon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "2J"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GlideIcon" type="ColorRect" parent="MarginContainer/VBoxContainer/AbilityContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
color = Color(0.4, 0.4, 0.4, 0.5)
tooltip_text = "Glide (Hold Space)"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/AbilityContainer/GlideIcon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "G"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BossHealthContainer" type="VBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 70.0
grow_horizontal = 2

[node name="BossName" type="Label" parent="BossHealthContainer"]
visible = false
layout_mode = 2
text = "BOSS NAME"
horizontal_alignment = 1

[node name="BossHealthBar" type="ProgressBar" parent="BossHealthContainer"]
visible = false
custom_minimum_size = Vector2(300, 20)
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false
